# Booter4aws

./: .gitignore  README.md  buildspec.yml  scenarios.json  start_four_robots.json  start_single_robot.json
setup/: aws_setup.bash  aws_setup_cicd.bash  aws_setup_with_lambdas.bash  aws_stop_sim.bash  aws_test_setup.bash  custom_dependencies.yaml  custom_dependencies_cicd.yaml  requirements.txt  robomaker_cicd_bucket.yml  robomaker_cicd_template.yml  robomaker_cloudformation_with_lambdas.yml  robomaker_template_with_lambdas.yml  ros_setup.bash  stop_sim.py
setup/checkStatus/: app.py
setup/fleetLauncherApp/: base_template.yml
setup/fleetLauncherApp/fleetLauncherLambda/: app.py  event.json
setup/processAndLaunchBatchSimulations/: app.py
setup/sendSimSummary/: app.py
setup/testLauncherApp/: app.py  event.json
simulation_ws/: .rosinstall
simulation_ws/src/aws_robomaker_simulation_common/: CMakeLists.txt  package.xml  setup.py
simulation_ws/src/aws_s3_uploader/: CMakeLists.txt  package.xml  setup.py
simulation_ws/src/aws_s3_uploader/config/: node_sample_configuration.yaml
simulation_ws/src/aws_s3_uploader/launch/: rolling_uploader.launch  s3_file_uploader.launch
simulation_ws/src/aws_s3_uploader/nodes/: upload_file.py  upload_manager.py
simulation_ws/src/cr2_control/: CMakeLists.txt  package.xml
simulation_ws/src/cr2_control/config/: control.yaml
simulation_ws/src/cr2_control/launch/: amcl.launch  control.launch  cr2.launch  cr2_fleet.launch  cr2_mapping.launch  cr2_single.launch  teleop.launch  teleop_joy.launch  test.launch
simulation_ws/src/cr2_control/scripts/: client_rosbridge.py
simulation_ws/src/cr2_control/static_models_w_plugin/cr2/: cr2.sdf  model.config
simulation_ws/src/cr2_description/: CMakeLists.txt  model.config  package.xml
simulation_ws/src/cr2_description/launch/: description.launch  display.launch
simulation_ws/src/cr2_description/meshes/: Mecanum_Wheel_2.stl  tray.stl
simulation_ws/src/cr2_description/params/: cr2_params.urdf.xacro  robot_description.yaml
simulation_ws/src/cr2_description/robot/: cr2.gazebo.xacro  cr2.rviz.xacro  cr2.urdf  cr2.urdf.xacro  cr2_new.urdf  generate_sdf.sh  generate_urdf.sh  my_sdf.sdf
simulation_ws/src/cr2_description/rviz/: cr2.rviz
simulation_ws/src/cr2_description/scripts/: env_run
simulation_ws/src/cr2_description/urdf/: common.urdf.xacro  materials.urdf.xacro  modified_wheels.urdf.xacro  pillar.urdf.xacro
simulation_ws/src/cr2_description/urdf/helpers/: add_base_link.urdf.xacro  add_body.urdf.xacro  add_head.urdf.xacro  add_sensors.urdf.xacro  add_wheels.urdf.xacro
simulation_ws/src/cr2_description/urdf/sensors/: imu.urdf.xacro  range.urdf.xacro  rplidar.urdf.xacro  ultrasonic.urdf.xacro
simulation_ws/src/cr2_gazebo/: CMakeLists.txt  package.xml
simulation_ws/src/cr2_gazebo/launch/: HQ.launch  gazebo.launch
simulation_ws/src/cr2_hospital_tests/: CMakeLists.txt  package.xml  setup.py
simulation_ws/src/cr2_hospital_tests/launch/: navigation_test.launch
simulation_ws/src/cr2_hospital_tests/nodes/: navigation_test.py
simulation_ws/src/cr2_multifleet/: CMakeLists.txt  package.xml
simulation_ws/src/cr2_multifleet/scripts/: client_rosbridge.py  data_client_rosbridge.py  data_server_rosbridge.py
simulation_ws/src/cr2_multifleet/src/: move_object.cc
simulation_ws/src/cr2_multifleet/static_models_w_plugin/cr2/: cr2.sdf  model.config
simulation_ws/src/cr2_multifleet/static_models_w_plugin/cr2/meshes/: Mecanum_Wheel_1.stl  back_cover.stl  body.stl  fix_solid_bug.sh  head.stl
simulation_ws/src/cr2_navigation/: CMakeLists.txt  package.xml
simulation_ws/src/cr2_navigation/launch/: amcl_demo.launch  coverage_demo.launch  gmapping_demo.launch  odom_navigation_demo.launch
simulation_ws/src/cr2_navigation/launch/include/: amcl.launch  ekf.launch  gmapping.launch  map_load.launch  map_save.launch  move_base.launch
simulation_ws/src/cr2_navigation/maps/: hospital.pgm  hospital.yaml  hq.pgm
simulation_ws/src/cr2_navigation/params/: costmap_common_params.yaml  dwa_local_planner_params.yaml
simulation_ws/src/cr2_navigation/params/ekf/: ekf.yaml  ekf_sim.yaml
simulation_ws/src/cr2_navigation/params/move_base/hw/: costmap_local.yaml  planner_local_dwa.yaml
simulation_ws/src/cr2_navigation/params/move_base/sim/: costmap_global.yaml
simulation_ws/src/cr2_navigation/params/sim/ekf/: ekf.yaml
simulation_ws/src/cr2_navigation/params/sim/full_coverage/: local_costmap_params.yaml
simulation_ws/src/cr2_navigation/params/sim/move_base/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner.yaml  planner_global_navfn.yaml  planner_local_dwa.yaml
simulation_ws/src/cr2_navigation/rviz/: nav.rviz
simulation_ws/src/cr2_tests/: CMakeLists.txt  package.xml
simulation_ws/src/cr2_tests/launch/: coverage_effectiveness.launch  coverage_test.launch  goal_tolerance_test.launch  navigation_test.launch  obstacle_avoidance_test.launch  rotation_test.launch  standstill_test.launch  straight_line_test.launch
simulation_ws/src/cr2_tests/routes/: route_hospital.yaml
simulation_ws/src/cr2_tests/rviz/: planner.rviz
simulation_ws/src/mecanum_gazebo_plugin/: CMakeLists.txt  package.xml
simulation_ws/src/ridgeback_gazebo_plugins/: CMakeLists.txt  package.xml
simulation_ws/src/ridgeback_gazebo_plugins/include/ridgeback_gazebo_plugins/: ridgeback_ros_force_based_move.h
simulation_ws/src/ridgeback_gazebo_plugins/src/: ridgeback_ros_force_based_move.cpp
simulation_ws/src/robot_monitoring/: CMakeLists.txt  package.xml  setup.py
simulation_ws/src/robot_monitoring/launch/: monitoring.launch
simulation_ws/src/robot_monitoring/nodes/: monitor_distance_to_goal.py
simulation_ws/src/softserve_empty_world/: CMakeLists.txt  package.xml
simulation_ws/src/softserve_empty_world/launch/: square.launch
simulation_ws/src/softserve_empty_world/maps/: square.yaml
simulation_ws/src/softserve_empty_world/models/softserve_square/: model.config  model.sdf
simulation_ws/src/softserve_empty_world/worlds/: square.world
