<?xml version="1.0"?>
<package format="2">
  <name>aws_s3_uploader</name>
  <version>0.0.1</version>
  <description>Upload files to S3</description>
  <author email="yfedi@softserveinc.com">Yuriy fedyuk</author>
  <maintainer email="yfedi@softserveinc.com">Yuriy fedyuk</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>    
    
    
  <depend>rosbag_cloud_recorders</depend>
  <depend>s3_file_uploader</depend>

</package>
