<?xml version="1.0"?>
<package format="2">
    <name>cr2_description</name>
    <version>0.0.0</version>
    <description>The cr2_description package</description>
    <maintainer email="user@todo.todo">user</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>urdf</depend>
    <depend>xacro</depend>
</package>
