<?xml version="1.0"?>
<package format="2">
    <name>cr2_gazebo</name>
    <version>0.0.0</version>
    <description>The cr2_gazebo package</description>
    <maintainer email="user@todo.todo">user</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>gazebo_ros</depend>
    <depend>gazebo_ros_control</depend>
    <depend>cr2_description</depend>
    <exec_depend>interactive_marker_twist_server</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <depend>controller_interface</depend>
    <depend>controller_manager</depend>
    <depend>realtime_tools</depend>
    <export>
        <gazebo_ros gazebo_plugin_path="${prefix}/../../lib" gazebo_model_path="${prefix}/.."/>
    </export>
</package>
