<?xml version="1.0"?>
<package format="2">
    <name>cr2_multifleet</name>
    <version>0.0.1</version>
    <description>Communication between different simulation through rosbridge</description>
    <maintainer email="yfedi@softserveinc.com">Yuriy Fedyuk</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>controller_interface</depend>
    <depend>controller_manager</depend>
    <depend>realtime_tools</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>tf</depend>
    <depend>urdf</depend>
    

    <exec_depend>interactive_marker_twist_server</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>joy</exec_depend>
    <exec_depend>robot_localization</exec_depend>
    <exec_depend>teleop_twist_joy</exec_depend>
    <exec_depend>topic_tools</exec_depend>
    <test_depend>roslaunch</test_depend>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>gazebo_ros</build_export_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rviz</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>roslibpy-pip</exec_depend>
    <exec_depend>rosbridge_server</exec_depend>
    <exec_depend>rosbridge_suite</exec_depend>

    <export>
      <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/static_models_w_plugin" />
    </export>
</package>
