<?xml version="1.0"?>
<package format="2">
  <name>robot_monitoring</name>
  <version>0.0.1</version>
  <description>
  Package that provides a sample application for monitoring robot with ROS.
  </description>
  <license>MIT</license>
  <author email="robotics@softserveinc.com">Softserve Robotics Team</author>
  <maintainer email="robotics@softserveinc.com">Softserve Robotics Team</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <depend>ros_monitoring_msgs</depend>
  
</package>